[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Particles/star.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/DropShadow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Rocc2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Rocc.png" type="Texture" id=5]
[ext_resource path="res://Shaders/dropshadow.material" type="Material" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 48.0
height = 13.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 291.3
initial_velocity_random = 0.2
angular_velocity = 66.21
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 4 )

[node name="RockGuy" type="KinematicBody2D"]
position = Vector2( 130.908, -317.543 )
script = ExtResource( 2 )
SPEED = 200

[node name="DropShadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 0, 64 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 9 )
shape = SubResource( 2 )

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.156863 )
material = ExtResource( 6 )
emitting = false
amount = 10
lifetime = 1.5
one_shot = true
explosiveness = 0.91
process_material = SubResource( 5 )
texture = ExtResource( 1 )
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
